<resources>

    <string name="app_name">android-search</string>

    <string name="search_widget_hint">Search</string>
    <string name="search_widget_transition_name">Search Widget</string>

    <string name="auto_complete_description">from your %s</string>
    <string name="auto_complete_description_title_search_history">Search History</string>
    <string name="auto_complete_description_title_contacts">Contacts</string>
    <string name="auto_complete_description_title_apps">Apps</string>
    <string name="auto_complete_description_title_files">Files</string>
    <string name="auto_complete_description_title_documents">Documents</string>
    <string name="auto_complete_description_title_music">Music</string>
    <string name="auto_complete_description_title_movies">Movies</string>
    <string name="auto_complete_description_title_pictures">Pictures</string>
    <string name="auto_complete_description_title_media">Media</string>
    <string name="auto_complete_description_title_podcasts">Podcasts</string>
    <string name="auto_complete_description_title_downloads">Downloads</string>
    <string name="auto_complete_description_phone_number">call Number</string>
    <string name="auto_complete_description_sms">send Text</string>
    <string name="auto_complete_description_web_address">open in Web Browser</string>
    <string name="auto_complete_description_email">compose Email</string>
    <string name="auto_complete_description_type_ahead">from Search Suggestions</string>

    <string name="topic_source">Source</string>

    <string name="instant_answer_attribution">Instant Answer Results from %s</string>

    <string name="duck_duck_go">DuckDuckGo</string>
    <string name="duck_duck_go_link">https://duckduckgo.com/</string>

    <string name="settings_search_toolbar_title">Search Settings</string>
    <string name="settings_toggle_title_apps">Applications</string>
    <string name="settings_toggle_title_audio_files">Audio Files</string>
    <string name="settings_toggle_title_image_files">Image Files</string>
    <string name="settings_toggle_title_video_files">Video Files</string>
    <string name="settings_toggle_title_contacts">Contacts</string>
    <string name="settings_toggle_title_email_links">Email Addresses</string>
    <string name="settings_toggle_title_url_links">Web Addresses</string>
    <string name="settings_toggle_title_phone_numbers">Phone Numbers</string>
    <string name="settings_toggle_title_suggestions">Suggestions</string>
    <string name="settings_toggle_title_history">History</string>

    <string name="settings_toggle_description_apps">Search through applications installed on this device.</string>
    <string name="settings_toggle_description_audio_files">Search through audio files stored on this device.</string>
    <string name="settings_toggle_description_image_files">Search through image files stored on this device.</string>
    <string name="settings_toggle_description_video_files">Search through video files stored on this device.</string>
    <string name="settings_toggle_description_contacts">Search through your contacts.</string>
    <string name="settings_toggle_description_email_addresses">Display option to compose email for query in email address format.</string>
    <string name="settings_toggle_description_web_addresses">Display option to load website for query in URL format.</string>
    <string name="settings_toggle_description_phone_numbers">Display options to call and send messages for query in phone number format.</string>
    <string name="settings_toggle_description_suggestions">Display search suggestions from Contextual Web Search.</string>
    <string name="settings_toggle_description_search_history">Allow storing and retrieving search history.</string>

    <string name="settings_search_approach_cell_title">Search Approach</string>

    <string name="search_approach_toolbar_title">Search Approach</string>
    <string name="search_approach_label_method">Method</string>
    <string name="search_approach_label_address">Address</string>
    <string name="search_approach_default_app">Default Search App</string>
    <string name="search_approach_web_view">WebView</string>
    <string name="search_approach_chrome_custom_tabs">Chrome Custom Tabs</string>
    <string name="search_approach_browser">Browser</string>
    <string name="search_approach_gecko_view">GeckoView</string>

    <string name="settings_radio_button_title_search_app">@string/search_approach_default_app</string>
    <string name="settings_radio_button_title_web_view">@string/search_approach_web_view</string>
    <string name="settings_radio_button_title_chrome_custom_tabs">@string/search_approach_chrome_custom_tabs</string>
    <string name="settings_radio_button_title_browser_app">@string/search_approach_browser</string>
    <string name="settings_radio_button_title_gecko_view">@string/search_approach_gecko_view</string>
    <string name="settings_radio_button_title_bing">Bing</string>
    <string name="settings_radio_button_title_contextual_web_search">Contextual Web Search</string>
    <string name="settings_radio_button_title_duck_duck_go">DuckDuckGo</string>
    <string name="settings_radio_button_title_google">Google</string>
    <string name="settings_radio_button_title_custom">Custom URL</string>

    <string name="settings_custom_url_hint">Enter Search URL</string>

    <string name="menu_item_title_open_in_browser">Open in Browser</string>

</resources>
