<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchAppsToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_apps"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchAudioFilesToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_audio_files"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchImageFilesToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_image_files"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchVideoFilesToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_video_files"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchContactsToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_contacts"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchCalendarEventsToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_calendar_events"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchTextMessagesToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_text_messages"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchEmailLinksToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_email_links"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchUrlLinksToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_url_links"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchPhoneNumbersToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_phone_numbers"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchInstantAnswersToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_instant_answers"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchSuggestionsToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_toggle_title_suggestions"/>

        <com.chrynan.androidsearch.ui.widget.ToggleCell
            android:id="@+id/searchHistoryToggleCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/auto_complete_description_title_search_history"/>

        <com.chrynan.androidsearch.ui.widget.RadioButtonCell
            android:id="@+id/openSearchAppRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isChecked="true"
            app:titleText="@string/settings_radio_button_title_search_app"/>

        <com.chrynan.androidsearch.ui.widget.RadioButtonCell
            android:id="@+id/openSearchWebViewRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_radio_button_title_web_view"/>

        <com.chrynan.androidsearch.ui.widget.RadioButtonCell
            android:id="@+id/openSearchChromeCustomTabRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_radio_button_title_chrome_custom_tabs"/>

        <com.chrynan.androidsearch.ui.widget.RadioButtonCell
            android:id="@+id/openSearchBrowserAppRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_radio_button_title_browser_app"/>

        <com.chrynan.androidsearch.ui.widget.RadioButtonCell
            android:id="@+id/bingUrlRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isChecked="true"
            app:titleText="@string/settings_radio_button_title_bing"/>

        <com.chrynan.androidsearch.ui.widget.RadioButtonCell
            android:id="@+id/contextualWebSearchUrlRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_radio_button_title_contextual_web_search"/>

        <com.chrynan.androidsearch.ui.widget.RadioButtonCell
            android:id="@+id/duckDuckGoUrlRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_radio_button_title_duck_duck_go"/>

        <com.chrynan.androidsearch.ui.widget.RadioButtonCell
            android:id="@+id/googleUrlRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_radio_button_title_google"/>

        <com.chrynan.androidsearch.ui.widget.RadioButtonCell
            android:id="@+id/customUrlRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/settings_radio_button_title_custom"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/customUrlTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_screen_margin"
            android:paddingTop="@dimen/spacing_xsmall"
            android:paddingEnd="@dimen/default_screen_margin"
            android:paddingBottom="@dimen/spacing_xsmall"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/customUrlTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_custom_url_hint"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>